Search Node implementation
Search Node implementation

--- a/vip-auth-tree/pom.xml
+++ b/vip-auth-tree/pom.xml
@@ -33,6 +33,8 @@
     <name>Template for an Auth Tree Node maven project</name>
     <description>An Authentication Tree Node for ForgeRock's Identity Platform</description>
     
+   
+    
     <repositories>
         <repository>
             <snapshots>
@@ -43,5 +45,29 @@
             <url>http://maven.forgerock.org/repo/private-releases</url>
         </repository>
     </repositories>
+    
+    
 
+    <dependencies>
+    	<dependency>
+			<groupId>org.apache.axis2</groupId>
+			<artifactId>axis2-kernel</artifactId>
+			<version>1.6.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.axis2</groupId>
+			<artifactId>axis2-adb</artifactId>
+			<version>1.6.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.axis2</groupId>
+			<artifactId>axis2-transport-local</artifactId>
+			<version>1.6.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.axis2</groupId>
+			<artifactId>axis2-transport-http</artifactId>
+			<version>1.6.2</version>
+		</dependency>
+    </dependencies>
 </project>
