Changes by Nitesh

--- a/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/SymantecVIPOtpCheck.properties
+++ b/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/SymantecVIPOtpCheck.properties
@@ -17,4 +17,4 @@
 nodeDescription=VIP Check Symantec OTP
 vipuserservice_url=Enter User Service URL
 vipuserservice_url.help= A service URL for User Service URL Example: https://userservices-auth.vip.symantec.com/vipuserservices/ManagementService_1_8
-
+vipotp.error = Security Code verification failed
