Nitesh Changes Oct 18th

--- a/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/SymantecAuthCredential.properties
+++ b/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/SymantecAuthCredential.properties
@@ -15,6 +15,9 @@
 #
 
 nodeDescription=VIP Authenticate Push Credential
-vipuserservice_url=Enter User Service URL
-vipuserservice_url.help= A service URL for User Service URL Example: https://userservices-auth.vip.symantec.com/vipuserservices/ManagementService_1_8
-
+displayMsgText = Push Display Message Text
+displayMsgText.help = Push Display Message Text
+displayMsgTitle = Push Display Message Title
+displayMsgTitle.help = Push Display Message Title
+displayMsgProfile = Push Display Message Profile
+displayMsgProfile.help = Push Display Message Profile
