--- a/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/SymantecAddCreds.properties
+++ b/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/SymantecAddCreds.properties
@@ -14,5 +14,6 @@
 # Copyright 2018 ForgeRock AS.
 #
 
+#Description of node, which will appear on selecting node during configuration of tree.
 nodeDescription=VIP Add Credential
 callback.creds=Choose Your Cred Type
