--- a/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/SymantecAuthCredential.properties
+++ b/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/SymantecAuthCredential.properties
@@ -14,7 +14,14 @@
 # Copyright 2018 ForgeRock AS.
 #
 
+
+# Description of node, which will appear on selecting node during configuration of tree.
 nodeDescription=VIP Authenticate Push Credential
+
+# These are the parameters which is passed in "AuthenticateCredentialsRequest".
+# These parameters will log under "displayParameters" field.
+# This passes and displays content to users in the push notification 
+# These params need to be configured during configuration of tree.
 displayMsgText = Push Display Message Text
 displayMsgText.help = Push Display Message Text
 displayMsgTitle = Push Display Message Title
