--- a/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/SymantecConfirmCred.properties
+++ b/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/SymantecConfirmCred.properties
@@ -14,8 +14,13 @@
 # Copyright 2018 ForgeRock AS.
 #
 
+#Description of node, which will appear on selecting node during configuration of tree.
 nodeDescription=VIP Add More Creds
+
+#This is the message which appear on ui select yes/no for add more credentials
 callback.creds=Add More Credentials
+
+#These are the outcomes from the node.
 YesOutcome=Yes
 NoOutcome=No
 #voiceOutcome=VOICE
