--- a/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/SymantecEnterOTP.properties
+++ b/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/SymantecEnterOTP.properties
@@ -13,6 +13,8 @@
 #
 # Copyright 2018 ForgeRock AS.
 #
-
+# Description of node, which will appear on selecting node during configuration of tree.
 nodeDescription=VIP Enter SecurityCode/OTP
+
+#This is the message which appear on ui to enter security code/OTP in text box.
 callback.securecode=Enter Your Security Code/OTP
