--- a/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/SymantecEnterPhoneNumber.properties
+++ b/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/SymantecEnterPhoneNumber.properties
@@ -14,5 +14,8 @@
 # Copyright 2018 ForgeRock AS.
 #
 
+# Description of node, which will appear on selecting node during configuration of tree.
 nodeDescription=VIP Enter Phone Number
+
+#This is the message which appear on ui to enter phone number in text box.
 callback.phoneNumber=Enter Your Phone Number
