--- a/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/SymantecPollPushAuth.properties
+++ b/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/SymantecPollPushAuth.properties
@@ -14,7 +14,10 @@
 # Copyright 2018 ForgeRock AS.
 #
 
+# Description of node, which will appear on selecting node during configuration of tree.
 nodeDescription=VIP Poll Push
+
+# These are the outcomes from the node.
 trueOutcome=TRUE
 falseOutcome=FALSE
 unansweredOutcome=UNANSWERED
