--- a/vip-auth-tree/pom.xml
+++ b/vip-auth-tree/pom.xml
@@ -1,55 +1,69 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
- * The contents of this file are subject to the terms of the Common Development and
- * Distribution License (the License). You may not use this file except in compliance with the
- * License.
- *
- * You can obtain a copy of the License at legal/CDDLv1.0.txt. See the License for the
- * specific language governing permission and limitations under the License.
- *
- * When distributing Covered Software, include this CDDL Header Notice in each file and include
- * the License file at legal/CDDLv1.0.txt. If applicable, add the following below the CDDL
- * Header, with the fields enclosed by brackets [] replaced by your own identifying
- * information: "Portions copyright [year] [name of copyright owner]".
- *
- * Copyright 2018 ForgeRock AS.
- * 
--->
+<!-- * The contents of this file are subject to the terms of the Common Development 
+	and * Distribution License (the License). You may not use this file except 
+	in compliance with the * License. * * You can obtain a copy of the License 
+	at legal/CDDLv1.0.txt. See the License for the * specific language governing 
+	permission and limitations under the License. * * When distributing Covered 
+	Software, include this CDDL Header Notice in each file and include * the 
+	License file at legal/CDDLv1.0.txt. If applicable, add the following below 
+	the CDDL * Header, with the fields enclosed by brackets [] replaced by your 
+	own identifying * information: "Portions copyright [year] [name of copyright 
+	owner]". * * Copyright 2018 ForgeRock AS. * -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-    <modelVersion>4.0.0</modelVersion>
+	<modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <artifactId>auth-tree-node-parent</artifactId>
-        <groupId>org.forgerock.am</groupId>
-        <version>6.0.0</version>
-    </parent>
+	<parent>
+		<artifactId>auth-tree-node-parent</artifactId>
+		<groupId>org.forgerock.am</groupId>
+		<version>6.0.0</version>
+	</parent>
 
-    <artifactId>vip-auth-tree</artifactId>
+	<artifactId>vip-auth-tree</artifactId>
 
-    <groupId>com.symantec.tree.nodes</groupId>
-    <version>1.0</version>    
-    <name>Template for an Auth Tree Node maven project</name>
-    <description>An Authentication Tree Node for ForgeRock's Identity Platform</description>
-    
-   
-    
-    <repositories>
-        <repository>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <id>forgerock-private-releases</id>
-            <name>ForgeRock Private Release Repository</name>
-            <url>http://maven.forgerock.org/repo/private-releases</url>
-        </repository>
-    </repositories>
-    
-    
+	<groupId>com.symantec.tree.nodes</groupId>
+	<version>1.0</version>
+	<name>Template for an Auth Tree Node maven project</name>
+	<description>An Authentication Tree Node for ForgeRock's Identity Platform</description>
 
-    <dependencies>
-    	<dependency>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<slf4j.version>1.6.6</slf4j.version>
+		<logback.version>1.0.7</logback.version>
+	</properties>
+
+	<repositories>
+		<repository>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<id>forgerock-private-releases</id>
+			<name>ForgeRock Private Release Repository</name>
+			<url>http://maven.forgerock.org/repo/private-releases</url>
+		</repository>
+	</repositories>
+
+
+	<dependencies>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>${logback.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.axis2</groupId>
 			<artifactId>axis2-kernel</artifactId>
 			<version>1.6.2</version>
@@ -69,5 +83,5 @@
 			<artifactId>axis2-transport-http</artifactId>
 			<version>1.6.2</version>
 		</dependency>
-    </dependencies>
+	</dependencies>
 </project>
