--- a/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/SymantecEnterCredId.properties
+++ b/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/SymantecEnterCredId.properties
@@ -14,5 +14,8 @@
 # Copyright 2018 ForgeRock AS.
 #
 
+#Description of node, which will appear on selecting node during configuration of tree.
 nodeDescription=VIP Enter CredentialID
+
+#This is the message which appear on ui to enter cred id in text box.
 callback.credId=Enter Your Cred Id
