--- a/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/SymantecMobNumCheck.properties
+++ b/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/SymantecMobNumCheck.properties
@@ -14,5 +14,7 @@
 # Copyright 2018 ForgeRock AS.
 #
 
+
+# Description of node, which will appear on selecting node during configuration of tree.
 nodeDescription=VIP IS OTP Available
 #callback.creds=Choose Your Cred Type
