--- a/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/SymantecOTPAuth.properties
+++ b/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/SymantecOTPAuth.properties
@@ -14,10 +14,20 @@
 # Copyright 2018 ForgeRock AS.
 #
 
+# Description of node, which will appear on selecting node during configuration of tree.
 nodeDescription=VIP OTPAuth Creds
+
+# This parameter will add credential choices during configuration of node.
+# It is in list format, So we can add multiple cred option in key-value pair.
+# Example: 0-SMS, 1-VOICE
 referrerCredList = List of Creds
 referrerCredList.help = Select Cred Type
+
+#This is the message which appear on ui to choose cred type in drop down.
+#Drop down will consist three options -- SMS, VOICE, TOKEN
 callback.creds=Choose Your Cred Type
+
+# These are the outcomes from the node.
 smsOutcome=SMS
 voiceOutcome=VOICE
 tokenOutcome=TOKEN
