--- a/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/SymantecPushAuth.properties
+++ b/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/SymantecPushAuth.properties
@@ -14,7 +14,13 @@
 # Copyright 2018 ForgeRock AS.
 #
 
+# Description of node, which will appear on selecting node during configuration of tree.
 nodeDescription=VIP Push Auth User
+
+# These are the parameters which is passed in "AuthenticateUserWithPushRequest".
+# These parameters will log under "displayParameters" field.
+# This passes and displays content to users in the push notification 
+# these params need to be configured in node.
 displayMsgText = Push Display Message Text
 displayMsgText.help = Push Display Message Text
 displayMsgTitle = Push Display Message Title
