--- a/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/SymantecVerifyCodeAddCred.properties
+++ b/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/SymantecVerifyCodeAddCred.properties
@@ -13,5 +13,9 @@
 #
 # Copyright 2018 ForgeRock AS.
 #
+
+#Description of node, which will appear on selecting node during configuration of tree.
 nodeDescription=VIP AddCred with VerifyCode
+
+
 callback.creds=Choose Your Cred Type
