--- a/vip-auth-tree/pom.xml
+++ b/vip-auth-tree/pom.xml
@@ -62,5 +62,18 @@
 			<artifactId>axis2-transport-http</artifactId>
 			<version>1.6.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.9.5</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.9.8</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
