--- a/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/VIPGenerateActivationCode.properties
+++ b/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/VIPGenerateActivationCode.properties
@@ -14,10 +14,7 @@
 # Copyright 2018 ForgeRock AS.
 #
 
-# Description of node, which will appear on selecting node during configuration of tree.
-nodeDescription=VIP Poll Push
+nodeDescription=VIP Activation Code
+vipuserservice_url=Enter User Service URL
+vipuserservice_url.help= A service URL for User Service URL Example: https://userservices-auth.vip.symantec.com/vipuserservices/ManagementService_1_8
 
-# These are the outcomes from the node.
-trueOutcome=TRUE
-falseOutcome=FALSE
-unansweredOutcome=UNANSWERED
