--- a/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/VIPPollPushAuth.properties
+++ b/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/VIPPollPushAuth.properties
@@ -11,8 +11,14 @@
 # Header, with the fields enclosed by brackets [] replaced by your own identifying
 # information: "Portions copyright [year] [name of copyright owner]".
 #
-# Copyright 2018 Sacumen.
+# Copyright 2018 ForgeRock AS.
 #
 
-nodeDescription=VIP Delete Credential
+# Description of node, which will appear on selecting node during configuration of tree.
+nodeDescription=VIP Poll Push
 
+# These are the outcomes from the node.
+trueOutcome=TRUE
+falseOutcome=FALSE
+errorOutcome=ERROR
+unansweredOutcome=UNANSWERED
