--- a/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/VIPPollPushReg.properties
+++ b/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/VIPPollPushReg.properties
@@ -15,9 +15,10 @@
 #
 
 # Description of node, which will appear on selecting node during configuration of tree.
-nodeDescription=VIP Search User
+nodeDescription=VIP Poll Push Reg
 
-# This parameter resemble to vipuserservice_url, which need to be configure in node.
-vipuserservice_url=Enter User Service URL
-vipuserservice_url.help= A service URL for User Service URL Example: https://userservices-auth.vip.symantec.com/vipuserservices/ManagementService_1_8
-
+# These are the outcomes from the node.
+trueOutcome=TRUE
+falseOutcome=FALSE
+errorOutcome=ERROR
+unansweredOutcome=UNANSWERED
