--- a/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/VIPPollPushAuth.properties
+++ b/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/VIPPollPushAuth.properties
@@ -15,7 +15,9 @@
 #
 
 # Description of node, which will appear on selecting node during configuration of tree.
-nodeDescription=VIP Poll Push
+nodeDescription=VIP Poll Push Auth
+search.error=You have rejected push, Please try again later
+
 
 # These are the outcomes from the node.
 trueOutcome=TRUE
