--- a/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/VIPSdkAddCreds.properties
+++ b/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/VIPSdkAddCreds.properties
@@ -14,6 +14,5 @@
 # Copyright 2018 ForgeRock AS.
 #
 
-# Description of node, which will appear on selecting node during configuration of tree.
-nodeDescription=VIP DISPLAY ERROR
-
+#Description of node, which will appear on selecting node during configuration of tree.
+nodeDescription=VIP SDK Add Credential
