Fixed Review Comments For Handling Exceptions

--- a/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/VIPDisplayError.properties
+++ b/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/VIPDisplayError.properties
@@ -14,13 +14,6 @@
 # Copyright 2018 ForgeRock AS.
 #
 
-#Description of node, which will appear on selecting node during configuration of tree.
-nodeDescription=VIP AddCred with VerifyCode
-
-
-callback.creds=Choose Your Cred Type
-
-# these are the outcomes from the node.
-trueOutcome=TRUE
-falseOutcome=FALSE
-errorOutcome=ERROR
+nodeDescription=VIP DISPLAY ERROR
+yes = yes
+no = no
