--- a/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/VIPSearchUser.properties
+++ b/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/VIPSearchUser.properties
@@ -16,3 +16,11 @@
 
 # Description of node, which will appear on selecting node during configuration of tree.
 nodeDescription=VIP Search User
+
+# These are the parameters which is passed o connect with VIP Services.
+# These parameters will log under "Key_Store_Path" and "Key_Store_Password" field.
+# these params need to be configured in node.
+Key_Store_Path = Keystore Path
+Key_Store_Path.help = Path Of The Keystore File
+Key_Store_Password = Keystore Password
+Key_Store_Password.help = Password Of The Keystore File
