--- a/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/VIPSearchUser.properties
+++ b/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/VIPSearchUser.properties
@@ -24,3 +24,9 @@ Key_Store_Path = Keystore Path
 Key_Store_Path.help = Path Of The Keystore File
 Key_Store_Password = Keystore Password
 Key_Store_Password.help = Password Of The Keystore File
+Authentication_Service_URL = Authentication Service URL
+Authentication_Service_URL.help = Please specify here VIP Authentication Service URL
+Query_Service_URL = Query Service URL
+Query_Service_URL.help = Please specify here VIP Query Service URL
+Management_Service_URL = Management Service URL
+Management_Service_URL.help = Please specify here VIP Management Service URL
