--- a/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/VIPEnterPhoneNumber.properties
+++ b/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/VIPEnterPhoneNumber.properties
@@ -19,3 +19,7 @@ nodeDescription=VIP Enter Phone Number
 
 #This is the message which appear on ui to enter phone number in text box.
 callback.phoneNumber=Enter Your Phone Number
+
+trueOutcome=TRUE
+falseOutcome=FALSE
+errorOutcome=ERROR
