--- a/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/VIPGenerateActivationCode.properties
+++ b/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/VIPGenerateActivationCode.properties
@@ -15,6 +15,10 @@
 #
 
 nodeDescription=VIP Activation Code
-vipuserservice_url=Enter User Service URL
-vipuserservice_url.help= A service URL for User Service URL Example: https://userservices-auth.vip.symantec.com/vipuserservices/ManagementService_1_8
 
+Key_Store_Path = Keystore Path
+Key_Store_Path.help = Path Of The Keystore File
+Key_Store_Password = Keystore Password
+Key_Store_Password.help = Password Of The Keystore File
+SDK_Service_URL = SDK Service URL
+SDK_Service_URL.help = Please specify here VIP SDK Service URL
