--- a/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/VIPSDKEnterOTP.properties
+++ b/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/VIPSDKEnterOTP.properties
@@ -13,13 +13,8 @@
 #
 # Copyright 2018 ForgeRock AS.
 #
+# Description of node, which will appear on selecting node during configuration of tree.
+nodeDescription=VIP SDK Enter SecurityCode/OTP
 
-#Description of node, which will appear on selecting node during configuration of tree.
-nodeDescription=VIP Add Credential
-callback.creds=Choose Your Cred Type
-
-# these are the outcomes from the node.
-trueOutcome=TRUE
-falseOutcome=FALSE
-errorOutcome=ERROR
-
+#This is the message which appear on ui to enter security code/OTP in text box.
+callback.securecode=Enter Your Security Code/OTP
