--- a/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/VIPSDKOTPCheck.properties
+++ b/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/VIPSDKOTPCheck.properties
@@ -20,3 +20,10 @@ nodeDescription=VIP SDK Check Symantec OTP
 trueOutcome=TRUE
 falseOutcome=FALSE
 errorOutcome=ERROR
+
+Key_Store_Path = Keystore Path
+Key_Store_Path.help = Path Of The Keystore File
+Key_Store_Password = Keystore Password
+Key_Store_Password.help = Password Of The Keystore File
+Authentication_Service_URL = Authentication Service URL
+Authentication_Service_URL.help = Please specify here VIP Authentication Service URL
