--- a/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/VIPSearchUser.properties
+++ b/vip-auth-tree/src/main/resources/com/symantec/tree/nodes/VIPSearchUser.properties
@@ -30,3 +30,7 @@ Query_Service_URL = Query Service URL
 Query_Service_URL.help = Please specify here VIP Query Service URL
 Management_Service_URL = Management Service URL
 Management_Service_URL.help = Please specify here VIP Management Service URL
+
+trueOutcome=TRUE
+falseOutcome=FALSE
+errorOutcome=ERROR
